maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:124: error: not found: value setPosition
    setPosition(X,Y-1)
    ^JediEscaper:128: error: not found: value setPosition
    setPosition(X,Y+1)
    ^JediEscaper:132: error: not found: value setPosition
    setPosition(X-1,Y)
    ^JediEscaper:136: error: not found: value setPosition
    setPosition(X+1,Y)
    ^